# Battery-Emulator

./: platformio.ini
.github/workflows/: compile-common-image-lilygo-2CAN.yml  compile-common-image-lilygo-TCAN.yml  compile-common-image-lilygo.yml  compile-common-image-stark.yml  compile-common-image.yml  release-assets.yml
Software/: Software.cpp  Software.ino
Software/src/: include.h
Software/src/battery/: BMW-I3-BATTERY.h  CHADEMO-SHUNTS.cpp  CanBattery.h  ECMP-BATTERY.h  MEB-BATTERY.h  MG-HS-PHEV-BATTERY.cpp  MG-HS-PHEV-BATTERY.h  RENAULT-ZOE-GEN2-BATTERY.h  TESLA-BATTERY.cpp  TESLA-BATTERY.h
Software/src/communication/can/: comm_can.cpp  comm_can.h
Software/src/communication/contactorcontrol/: comm_contactorcontrol.cpp
Software/src/communication/equipmentstopbutton/: comm_equipmentstopbutton.cpp
Software/src/communication/meter_emu/: comm_meter_emu.cpp  comm_meter_emu.h
Software/src/datalayer/: datalayer.h
Software/src/devboard/hal/: hal.cpp  hw_lilygo.h
Software/src/devboard/mqtt/: mqtt.cpp
Software/src/devboard/utils/: events.cpp  logging.cpp  logging.h  millis64.cpp  millis64.h  time_meas.h  timer.cpp  timer.h
Software/src/devboard/webserver/: cellmonitor_html._cpp  debug_logging_html.cpp  debug_logging_html.h  events_html.cpp  settings_html.cpp  webserver.cpp
Software/src/devboard/wifi/: wifi.cpp  wifi.h
Software/src/inverter/: PYLON-LV-CAN.cpp  SOLAX-CAN.cpp
Software/src/lib/ESP32Async-ESPAsyncWebServer/src/: WebResponses.cpp
Software/src/lib/TinyWebServer/: TinyWebServer.cpp  TinyWebServer.h
Software/src/lib/mathieucarbou-AsyncTCPSock/src/: AsyncTCP.cpp
pc/: CMakeLists.txt
test/: CMakeLists.txt  tests.cpp
test/battery/: double.cpp
test/emul/: Arduino.cpp  Arduino.h  HardwareSerial.h  MD5Builder.cpp  Print.h  SD_MMC.cpp  SD_MMC.h  WString.h  WiFi.h  can.cpp  esp_timer.h  hacks.cpp  sdcard.cpp
test/emul/freertos/: FreeRTOS.h  task.h
